# 2.08.09 (59415) Dec 16, 2011
12/16/2011 common: Grab onto a nearby track while dragging
# 2.08.08 (59163) Dec 8, 2011
12/8/2011 common: Improved performance for Energy Skate Park grid
# 2.08.07 (59055) Dec 5, 2011
basics: Made splines go in front of the control panel in "Track Playground" tab
# 2.08.06 (59024) Dec 5, 2011
12/5/11 basics: Change the height of the skater when his mass changes
12/5/11 basics: Added a mass slider to the intro tab
12/5/11 common: changed text background on clock control slider to white
12/5/11 basics: Added a speedometer node
12/5/11 common: Removed docked time control panel and converted to floating clock controls
12/4/11 common: Fixed: Initial conditions for "stick to track" not respected in 3rd tab
12/4/11 common: Fixed: Drag to add track should have track centered in box horizontally, move down from the text, center the text
12/4/11 common: Made the mountains 25% smaller so they won't overlap the W track in tab 1 of basics sim
12/4/11 common: Changed "Drag to add track" to "Tracks"
12/4/11 basic: Make x=2 meters the dark line with labels
12/4/11 basic: Put the numbers on the left side of the line instead of the right side
12/4/11 basic: Fixed: When closing the bar graph, checkbox should get unchecked
12/2/11 basic: Fixed: After changing friction then reset all, friction not disabled in Friction tab
12/2/11 basic: Merged control panels in the track playground tab
12/2/11 basic: Merged control panels in the friction tab
# 2.08.05 (58976) Dec 1, 2011
12/1/11 basic: made the icons in the control panel clickable for toggling their respective properties
12/1/11 common: Removed padding from mountain image
12/1/11 common: Made "drag to add track" box rounded and added insets
12/1/11 common: Use orange piccolo button for "Return Skater" button for both sims
12/1/11 common: Replaced house and mountain images with higher resolution versions from NP
12/1/11 common: use PhetColorScheme.RED_COLORBLIND instead of Color.red