@@ -1,3 +1,4 @@
+12/16/2011 common: Don't allow to drag through the floor if any (no floor in space when g=0)
 # 2.08.09 (59415) Dec 16, 2011
 12/16/2011 common: Grab onto a nearby track while dragging
 # 2.08.08 (59163) Dec 8, 2011
